APP內通知(only更新&顯示)

--- a/.io-config.json
+++ b/.io-config.json
@@ -1,1 +1,1 @@
-{"app_id":"afdfc0f2","api_key":"8ed06391a0776c36b51c52857f06df0e7b241e7f689439db","dev_push":false,"gcm_key":"731989352867"}
+{"app_id":"afdfc0f2","api_key":"8ed06391a0776c36b51c52857f06df0e7b241e7f689439db","dev_push":true,"gcm_key":"731989352867"}
