--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "ionic-platform-web-client": "^0.7.1",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
